5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1590_1571.log
== TEST (2019-03-20 14:56:21) 
-- CODE:
print(lara isabela.upper())


-- ERROR:
File "XXXX", line 1
    print(lara isabela.upper())
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:18:26) 
-- CODE:
texto = "LARA SANTANA"
print(texto.upper())


-- OUTPUT:
LARA SANTANA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:18:56) 
-- CODE:
texto = "lara isabela"
print(texto.upper())


-- OUTPUT:
LARA ISABELA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:19:00) 
-- CODE:
texto = "lara isabela"
print(texto.upper())


-- EXECUTION TIME:
0.144412
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
LARA ISABELA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:20:19) 
-- CODE:
nome = input("Qual o seu nome? ")
print(texto.upper())


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper())
NameError: name 'texto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:20:39) 
-- CODE:
nome = input("Qual o seu nome? ")
print(nome.upper())


-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:20:51) 
-- CODE:
nome = input("Qual o seu nome? ")
print(nome.upper())


-- EXECUTION TIME:
0.184849
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
